--- a/package.json
+++ b/package.json
@@ -1,22 +1,75 @@
 {
-  "name": "weather-app",
+  "name": "ps-store",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "contentful-typescript-codegen": "contentful-typescript-codegen --output contentful.d.ts"
   },
   "dependencies": {
-    "@types/node": "20.1.1",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
+    "@contentful/rich-text-html-renderer": "^15.13.1",
+    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@delicious-simplicity/next-image-contentful-loader": "^1.0.4",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.9",
+    "@sendgrid/mail": "^7.7.0",
+    "@svgr/webpack": "^6.5.1",
+    "@types/next": "^9.0.0",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
+    "axios": "^0.25.0",
+    "contentful": "^9.2.11",
+    "contentful-management": "^10.19.4",
+    "contentful-typescript-codegen": "^3.4.0",
+    "csvtojson": "^2.0.10",
+    "dotenv": "^16.0.3",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.2",
+    "eslint-config-react-typescript": "^1.0.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "lodash.debounce": "^4.0.8",
+    "next": "^13.0.2",
+    "next-with-less": "^2.0.5",
+    "nextjs-cors": "^2.1.2",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-paginate": "^8.1.5",
+    "react-papaparse": "^4.1.0",
+    "sass": "^1.62.1",
+    "styled-components": "^5.3.6",
+    "swiper": "^9.1.0",
+    "swr": "^1.3.0",
+    "typescript": "4.8.4",
+    "zustand": "^4.3.2"
+  },
+  "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/node": "18.11.5",
+    "@types/papaparse": "^5.3.7",
+    "@types/react": "18.0.23",
+    "@types/react-slick": "^0.23.10",
+    "@types/react-star-ratings": "^2.3.0",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.31.8",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.4"
   }
 }
